feat: add update event functionality